--- a/src/Components/Addtodo/Addtodo.css
+++ b/src/Components/Addtodo/Addtodo.css
@@ -8,9 +8,10 @@ input {
 
 @media only screen and (max-width: 800px) {
 
-  input {
+  .todoInput{
     padding: 5px 0px;
-    width: 230px;
-    border: 2px solid green;
+    width: 180px;
+    border: 2px solid black;
+
   }
 }
